# C_practice_project

./: CMakeLists.txt  main.c  readme.md  types.h
includes/: blood_type_handler.h  create_person.h  file_handler.h  general.h  navigation.h  person.h
src/: blood_type_handler.c  create_person.c  file_handler.c  main.c  navigation.c
